# SERVICIOS_CINE

./: .dockerignore  .env.example  .env.home.example  .env.vps.example  .gitignore  .msys00000000020eef73ab26c052512bd1e2  AB_COMPARISON_REPORT.md  AGENTS.md  Caddyfile  Caddyfile.deploy  DB_MIGRATIONS.md  DOCKER.md  FLUX_DEBUG_REPORT.md  GEMINI.md  README.md  README_TAILSCALE.md  README_WSL2.md  SEQUENCE_GRID_IMPLEMENTATION.md  SEQUENCE_PRESENTATION_IMPLEMENTATION.md  SPRINT_12_2_PRESENTATION.md  SPRINT_12_3_DELIVERY.md  SPRINT_ROADMAP.md  THUMBNAILS_FIX.md  VISUAL_ENGINE_DECISION_FROZEN.md  ailinkcinema.db  ailinkcinema_s2.db  alembic.ini  arranque_ailinkcinema_cid_demo.bat  arranque_servidor.bat  compose.base.yml  compose.comfyui.gpu.yml  compose.comfyui.yml  compose.data.yml  compose.home.tailscale.yml  compose.home.yml  compose.n8n.yml  compose.ollama.gpu.yml  compose.ollama.yml  compose.vps.yml  copiar_al_servidor.bat  (+17 more)
CINE_AI_PLATFORM/: .env.compose.example  .env.private.example  .gitignore  CINE AI PLATFORM — GUÍA COMPLETA DE INSTALACIÓN Y DESARROLLO  Dockerfile.cine  docker-compose.private.yml  docker-compose.yml  smoke_remote_render.ps1
OLD/: MANIFEST_OLD_MOVE.md  MANIFEST_OLD_MOVE.md.bak_dedupe
PROYECTO FINAL V1/: .gitignore  CHECKLIST_PRIMERA_PRUEBA_INTEGRADA.md  Caddyfile  DEPLOY_SERVIDOR.md  GUIA_DEMO_INTEGRADA_5_7_MINUTOS.md  QUICKSTART.md  README.md  cid.env.example  cine.env.example  copiar_a_servidor.ps1  copiar_en_servidor.ps1  docker-compose.yml  setup.ps1  setup.sh
ai-dubbing-legal-studio/: .env.example  .env.production.example  README.md  (+3 more)
(+2753 files in other folders)
