[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cid-local-media-agent"
version = "0.1.0"
description = "CID Local Media Agent controlled local CLI packaging metadata."
requires-python = ">=3.12"

[project.scripts]
cid-local-media-agent-visible-report-write-enabled-export = "scripts.local_media_agent.ffprobe_controlled_file_metadata_visible_report_controlled_text_artifact_write_enabled_export_cli:main"

[tool.setuptools.packages.find]
include = ["scripts*"]
namespaces = true
